<resources>
    <string name="app_name">UAInsured</string>
    <string name="uainsured">UAInsured</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">Dont have an account?Register</string>
    <string name="email">Email</string>
    <string name="submit">submit</string>
    <string name="registration_header">Get on board</string>
    <string name="name">Name</string>
    <string name="phoneHint">Phone</string>
    <string name="kra_number">KRA Number</string>
    <string name="sign_in_here">Got an account? Sign in Here</string>
    <string name="registration_button">Register</string>
    <string name="menu_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="menu_contacts">Contact us</string>
    <string name="sign_out">Sign out</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
</resources>