<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_contacts"/>

    </group>

    <item
        android:title=""
        >
        <menu>
            <item
                android:id="@+id/signOut"
                android:title="@string/sign_out"/>
        </menu>

    </item>


</menu>